body overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ html {
 }
 
 *, *:after, *:before {
-  box-sizing: inherit;
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
   
@@ -32,18 +32,7 @@ a {
   margin: 0 auto;
 }
 
-@media screen and (max-width:768px) {
-  .container {
-    min-width: 768px;
-  }
-}
 
-@media screen and (max-width:375px) {
-  .container {
-    min-width: 375px;
-  }
-  
-}
 
 .section {
   margin: 0 auto;
@@ -159,7 +148,7 @@ a {
   display: grid;
   grid-template-columns: repeat(4, 160px);
   grid-template-rows: auto;
-  grid-column-gap: 60px;
+  grid-column-gap: 10%;
   justify-items: center;
   align-items: center;
   justify-content: center;
@@ -274,22 +263,24 @@ a {
 @media only screen and (max-width: 768px) {
 
   .top-info__nav {
+    grid-template-columns: 1fr 1fr;
     grid-template-rows: minmax(120px, auto);
+    grid-column-gap: 0;
     margin: 0 auto;
   }
 
   .top-info__speed_container {
-    grid-column: 2;
+    grid-column: 1;
   }
   .top-info__range_container {
-    grid-column: 3;
+    grid-column: 2;
   }
   .top-info__test-drive {
-    grid-column: 2;
+    grid-column: 1;
     grid-row: 2;
   }
   .top-info__order {
-    grid-column: 3;
+    grid-column: 2;
     grid-row: 2;
   }
 }
@@ -303,23 +294,21 @@ padding-top: 35px;
 
 .md-info {
   display: grid;
-  grid-gap: 0;
-  grid-row-gap: 0;
-  grid-template-columns: 70% 15% 15%;
+  grid-template-columns: 65% 35%;
   width: 100%;
   min-width: 100%;
 }
 
 @media screen and (max-width: 768px) {
   .md-info {
-    grid-template-columns: repeat(2, 50%);
+    grid-template-columns: 50% 50%;
     grid-template-rows: 500px auto auto;
   }
 }
 
 .md-info__image-box {
-  grid-column: span 1;
-  grid-row: 1 / span 3;
+  grid-column: 1;
+  grid-row: 1 / 4;
   height: 100%;
   width: 100%;
   background-image: url("/img/2013-tesla-model-s-cockpit.png");
@@ -381,7 +370,7 @@ padding-top: 35px;
 }
 
 .md-info__about {
-  grid-column: 2 / span 3;
+  grid-column: 2 ;
   grid-row: 1;
 }
 
@@ -417,7 +406,7 @@ padding-top: 35px;
 }
 
 .md-info__features {
-  grid-column: 2 / span 3;
+  grid-column: 2 ;
   grid-row: 2;
   padding-bottom: 170px;
 }
@@ -437,9 +426,11 @@ padding-top: 35px;
 
 .info-box__item {
   display: flex;
-  margin-left: 50px;
+  margin-left: 12%;
   margin-bottom: 45px;
+  overflow-wrap: break-word;
 }
+
 
 @media screen and (max-width:768px) {
   .info-box__item {
@@ -455,18 +446,18 @@ padding-top: 35px;
 }
 
 .info-box__item img {
-  margin-right: 24px;
+  margin-right: 5%;
   align-self: center;
 }
 
 .info-box__item-name {
   color: #fff;
+  
 }
 .info-box__item-title {
   font-size: 20px;
   font-weight: 600;
   line-height: 24px;
-  
 }
 
 .info-box__item-title b {
@@ -477,17 +468,17 @@ padding-top: 35px;
   font-size: 12px;
   line-height: 15px;
 }
+
 .info-box__buttons {
+  grid-column: 2;
+  grid-row: 3;
+  background-color: #E51937;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   padding-bottom: 60px;
 }
 
-.info-box__buttons {
-  grid-column: 2 / span 3;
-  grid-row: 3;
-  background-color: #E51937;
-}
 
 @media screen and (max-width:768px) {
   .info-box__buttons{
@@ -503,8 +494,7 @@ padding-top: 35px;
 }
 
 .info-box__button {
-  grid-column: span 2;
-  display: block;
+  grid-column: 2;
   margin-right: 20px;
 }
 
@@ -540,10 +530,10 @@ padding-top: 35px;
 .bt-info-box__text-box {
   grid-column: 1;
   grid-row: 1;
-  padding-top: 51px;
-  padding-left: 55px;
-  padding-right: 65px;
-  padding-bottom: 50px;
+  padding-top: 15%;
+  padding-left: 15%;
+  padding-right: 15%;
+  padding-bottom: 15%;
 }
 
 @media screen and (max-width:768px) {
@@ -606,6 +596,7 @@ padding-top: 35px;
 
 .bottom-info-box__item {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
 }
 
@@ -656,7 +647,7 @@ padding-top: 35px;
 
 .bottom-image-box {
   grid-column: 2;
-  grid-row: 1 / 5;
+  grid-row: 1 / 3;
   background: url("/img/Model\ S.png");
   background-repeat: no-repeat;
   background-position: 100% 70px;
@@ -688,6 +679,10 @@ padding-top: 35px;
   }
 }
 
+
+.bottom-image-box img {
+  width: 100%;
+}
 
 .bt-info-box__rating {
   text-align: center;
